fix: remove white space in header

--- a/apps/frontend/src/components/Header.css
+++ b/apps/frontend/src/components/Header.css
@@ -14,10 +14,6 @@
   padding: 8px;
 }
 
-.banner-container {
-    padding: 2rem 0;
-}
-
 .banner-image{
     width: 100%;
     height: 100px;
